generator client {
  provider = "prisma-client-js"
}

datasource db {
  provider  = "postgresql"
  url       = env("DATABASE_URL")
  directUrl = env("DIRECT_URL")
}

model User {
  id            String         @id @default(uuid())
  email         String         @unique
  passwordHash  String         @map("password_hash")
  name          String?
  avatarUrl     String?        @map("avatar_url")
  memo          String?
  createdAt     DateTime       @default(now()) @map("created_at")
  updatedAt     DateTime       @updatedAt @map("updated_at")
  calendars          Calendar[]
  colorLabels        ColorLabel[]
  events             Event[]
  groupMembers       GroupMember[]
  ownedGroups        Group[]        @relation("GroupOwner")
  shiftPatterns      ShiftPattern[]
  shifts             Shift[]
  createdTodoLists   TodoList[]     @relation("TodoListCreator")
  createdTodoItems   TodoItem[]     @relation("TodoItemCreator")
  assignedTodoItems  TodoItem[]     @relation("TodoItemAssignee")

  @@map("users")
}

model ColorLabel {
  id        String   @id @default(uuid())
  userId    String   @map("user_id")
  name      String
  color     String
  sortOrder Int      @default(0) @map("sort_order")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  user      User     @relation(fields: [userId], references: [id])

  @@map("color_labels")
}

model Group {
  id          String        @id @default(uuid())
  name        String
  inviteToken String        @unique @map("invite_token")
  ownerId     String        @map("owner_id")
  createdAt   DateTime      @default(now()) @map("created_at")
  updatedAt   DateTime      @updatedAt @map("updated_at")
  calendars   Calendar[]
  events      Event[]
  members     GroupMember[]
  owner       User          @relation("GroupOwner", fields: [ownerId], references: [id])
  shifts      Shift[]
  todoLists   TodoList[]
  todoItems   TodoItem[]

  @@map("groups")
}

model GroupMember {
  id       String   @id @default(uuid())
  groupId  String   @map("group_id")
  userId   String   @map("user_id")
  joinedAt DateTime @default(now()) @map("joined_at")
  group    Group    @relation(fields: [groupId], references: [id])
  user     User     @relation(fields: [userId], references: [id])

  @@unique([groupId, userId])
  @@map("group_members")
}

model Calendar {
  id        String   @id @default(uuid())
  groupId   String   @map("group_id")
  name      String
  color     String
  createdBy String   @map("created_by")
  createdAt DateTime @default(now()) @map("created_at")
  updatedAt DateTime @updatedAt @map("updated_at")
  creator   User     @relation(fields: [createdBy], references: [id])
  group     Group    @relation(fields: [groupId], references: [id])
  events    Event[]

  @@map("calendars")
}

model Event {
  id         String   @id @default(uuid())
  groupId    String   @map("group_id")
  calendarId String   @map("calendar_id")
  createdBy  String   @map("created_by")
  title      String
  memo       String?
  location   String?
  color      String?
  startAt    DateTime @map("start_at")
  endAt      DateTime @map("end_at")
  isAllDay   Boolean  @default(false) @map("is_all_day")
  isSecret   Boolean  @default(false) @map("is_secret")
  createdAt  DateTime @default(now()) @map("created_at")
  updatedAt  DateTime @updatedAt @map("updated_at")
  calendar   Calendar @relation(fields: [calendarId], references: [id], onDelete: Cascade)
  creator    User     @relation(fields: [createdBy], references: [id])
  group      Group    @relation(fields: [groupId], references: [id])

  @@map("events")
}

model ShiftPattern {
  id           String   @id @default(uuid())
  userId       String   @map("user_id")
  name         String
  color        String
  startTime    String?  @map("start_time")
  endTime      String?  @map("end_time")
  breakMinutes Int      @default(0) @map("break_minutes")
  isDayOff     Boolean  @default(false) @map("is_day_off")
  sortOrder    Int      @default(0) @map("sort_order")
  createdAt    DateTime @default(now()) @map("created_at")
  updatedAt    DateTime @updatedAt @map("updated_at")
  user         User     @relation(fields: [userId], references: [id])
  shifts       Shift[]

  @@map("shift_patterns")
}

model Shift {
  id             String       @id @default(uuid())
  userId         String       @map("user_id")
  groupId        String       @map("group_id")
  shiftPatternId String       @map("shift_pattern_id")
  date           DateTime     @db.Date
  createdAt      DateTime     @default(now()) @map("created_at")
  updatedAt      DateTime     @updatedAt @map("updated_at")
  group          Group        @relation(fields: [groupId], references: [id])
  shiftPattern   ShiftPattern @relation(fields: [shiftPatternId], references: [id])
  user           User         @relation(fields: [userId], references: [id])

  @@unique([userId, date, shiftPatternId])
  @@map("shifts")
}

model TodoList {
  id        String     @id @default(uuid())
  groupId   String     @map("group_id")
  name      String
  color     String     @default("#3b82f6")
  createdBy String     @map("created_by")
  createdAt DateTime   @default(now()) @map("created_at")
  updatedAt DateTime   @updatedAt @map("updated_at")
  creator   User       @relation("TodoListCreator", fields: [createdBy], references: [id])
  group     Group      @relation(fields: [groupId], references: [id])
  items     TodoItem[]

  @@map("todo_lists")
}

model TodoItem {
  id          String    @id @default(uuid())
  listId      String    @map("list_id")
  groupId     String    @map("group_id")
  title       String
  memo        String?
  dueDate     DateTime? @map("due_date")
  createdBy   String    @map("created_by")
  assignedTo  String?   @map("assigned_to")
  isCompleted Boolean   @default(false) @map("is_completed")
  completedAt DateTime? @map("completed_at")
  sortOrder   Int       @default(0) @map("sort_order")
  createdAt   DateTime  @default(now()) @map("created_at")
  updatedAt   DateTime  @updatedAt @map("updated_at")
  assignee    User?     @relation("TodoItemAssignee", fields: [assignedTo], references: [id])
  creator     User      @relation("TodoItemCreator", fields: [createdBy], references: [id])
  group       Group     @relation(fields: [groupId], references: [id])
  list        TodoList  @relation(fields: [listId], references: [id], onDelete: Cascade)

  @@map("todo_items")
}

