// Calendar Sharing App - Database Schema
// Generated: 2026-06-12

Table users {
  id uuid [pk]
  email string [unique, not null]
  password_hash string [not null]
  name string
  avatar_url string
  memo string [note: '自己紹介・ひとことメモ（最大200文字）']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    email
  }
}

Table groups {
  id uuid [pk]
  name string [not null]
  invite_token string [unique, not null]
  owner_id uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    invite_token
    owner_id
  }
}

Table group_members {
  id uuid [pk]
  group_id uuid [not null, ref: > groups.id]
  user_id uuid [not null, ref: > users.id]
  joined_at timestamp [default: `now()`]
  
  indexes {
    group_id
    user_id
  }

  // 1ユーザーは複数グループに所属可能。同一グループへの重複参加は不可
  unique (group_id, user_id)
}

Table calendars {
  id uuid [pk]
  group_id uuid [not null, ref: > groups.id]
  name string [not null]
  color string [not null, note: 'e.g., #FF6B6B']
  created_by uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]
  
  indexes {
    group_id
    created_by
  }
}

Table events {
  id uuid [pk]
  group_id uuid [not null, ref: > groups.id]
  calendar_id uuid [not null, ref: > calendars.id]
  created_by uuid [not null, ref: > users.id]
  title string [not null]
  memo string
  location string [note: 'optional, max 200 chars']
  color string [note: 'optional override, defaults to calendar.color']
  start_at timestamp [not null]
  end_at timestamp [not null]
  is_all_day boolean [default: false, note: 'true: only date is used']
  is_secret boolean [default: false, note: 'true: only visible to the creator']
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    group_id
    calendar_id
    created_by
    (start_at, end_at)
  }
}

Table color_labels {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  name string [not null, note: '色の名称 e.g., 仕事、プライベート（最大30文字）']
  color string [not null, note: 'e.g., #FF6B6B']
  sort_order int [not null, default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    user_id
    (user_id, sort_order)
  }
}

Table shift_patterns {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  name string [not null, note: '表示名称 e.g., 1, 振休']
  color string [not null, note: 'e.g., #FF6B6B']
  start_time time [note: 'null if is_day_off = true']
  end_time time [note: 'null if is_day_off = true']
  break_minutes int [default: 0, note: '休憩時間（分）']
  is_day_off boolean [not null, default: false]
  sort_order int [not null, default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    user_id
    (user_id, sort_order)
  }
}

Table shifts {
  id uuid [pk]
  user_id uuid [not null, ref: > users.id]
  group_id uuid [not null, ref: > groups.id]
  shift_pattern_id uuid [not null, ref: > shift_patterns.id]
  date date [not null]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    (user_id, date)
    (group_id, date)
  }

  // Multiple shift patterns can be assigned per user per day
  unique (user_id, date, shift_pattern_id)
}

Table todo_lists {
  id uuid [pk]
  group_id uuid [not null, ref: > groups.id]
  name string [not null, note: 'リスト名']
  color string [not null, default: '#3b82f6', note: 'e.g., #3b82f6']
  created_by uuid [not null, ref: > users.id]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    group_id
    created_by
  }
}

Table todo_items {
  id uuid [pk]
  list_id uuid [not null, ref: > todo_lists.id]
  group_id uuid [not null, ref: > groups.id]
  title string [not null]
  memo string
  due_date timestamp [note: 'optional deadline']
  created_by uuid [not null, ref: > users.id]
  assigned_to uuid [ref: > users.id, note: 'optional assignee']
  is_completed boolean [default: false]
  completed_at timestamp [note: 'set when is_completed becomes true']
  sort_order int [default: 0]
  created_at timestamp [default: `now()`]
  updated_at timestamp [default: `now()`]

  indexes {
    list_id
    group_id
    created_by
    assigned_to
    (list_id, is_completed, sort_order)
  }
}

// Notes on schema:
//
// 1. users: Basic user authentication
//    - email: unique for login
//    - password_hash: bcrypt hashed password
//
// 2. groups: Group management
//    - invite_token: unique token for invitation links (e.g., UUID)
//    - owner_id: user who created the group
//
// 3. group_members: Group membership
//    - unique constraint on (group_id, user_id): prevents duplicate membership in same group
//    - 1 user can belong to multiple groups; joining via invite link creates a new row
//
// 4. calendars: Supports multiple calendars per group
//    - Each group can have many calendars (private, work, etc.)
//    - All group members see all calendars
//    - Calendar ON/OFF visibility toggle is client-side state only (no DB column needed)
//
// 5. events: Events on calendars
//    - calendar_id: references which calendar this event belongs to
//    - created_by: stores owner for edit/delete permission
//    - is_all_day: flag for all-day vs. timed events
//    - start_at / end_at: for all-day, only date portion is used
//    - location: optional venue text (max 200 chars)
//
// 6. color_labels: Per-user named color labels
//    - user_id: each user manages their own color labels
//    - name: display name for the color (max 30 chars)
//    - color: hex color code matching EVENT_COLORS or custom
//    - sort_order: display order on color picker UI
//    - デフォルトカラー（EVENT_COLORS）に名称を付けた場合もここに保存
//
// 7. shift_patterns: Per-user shift pattern definitions
//    - user_id: each user manages their own patterns
//    - start_time / end_time: null when is_day_off = true
//    - break_minutes: stored in minutes for arithmetic
//    - sort_order: display order on pattern selection UI
//
// 8. shifts: Daily shift assignments per user
//    - unique (user_id, date, shift_pattern_id): multiple patterns per day allowed
//    - group_id: denormalized for efficient group-wide queries (work calendar)
//
// 9. todo_lists: TODO list definitions per group
//    - group_id: shared among all group members
//    - color: hex color for visual identification
//    - created_by: only creator can delete the list
//
// 10. todo_items: Individual TODO items within a list
//    - list_id: cascade-deleted when parent list is deleted
//    - created_by: only creator can edit/delete the item
//    - assigned_to: optional, any group member can be assigned
//    - is_completed: toggled by any group member
//    - completed_at: automatically set/cleared when is_completed changes
//    - sort_order: display order within the list (未完了 → 完了 の順で表示)
